update of the diagonal Pattern logic, start of the LT.